--- a/Java Topic/4-java sizeof.ipynb
+++ b/Java Topic/4-java sizeof.ipynb
@@ -5,17 +5,107 @@
    "metadata": {},
    "source": [
     "在开始讲解如何计算一个Java对象占用的内存大小之前, 先看几个谬论\n",
-    "### 谬论\n",
+    "### 一. 谬论\n",
     "\n",
-    "#### 1. 谬论一: Java不需要`sizeof()`函数, 因为java的基本类型大小是确定的\n"
+    "#### 1. 谬论一: Java不需要`sizeof()`函数, 因为java的基本类型大小是确定的\n",
+    "没错, java中的`int`类型在任何平台或虚拟机下都是32bit的. 但这只是从编程者的角度去看. 实际上, Java在语言层面并没有说明当int类型定义在类的属性中时应该在内存中以何种方式对齐, 或者也没有说明一个`boolean数组`就不能用一个压缩的bit向量来实现. 这些都会导致对象的size不能通过简单的计算基本类型叠加得到\n",
+    "\n",
+    "#### 2. 谬论二: Java对象的size, 可以通过将其序列化成bit流后, 去看流的长度\n",
+    "序列化后的长度并不等与内存中占用的空间大小. 比如`String`类, 在内存中以char数组的形式出现, 每个char至少占2字节; 而序列化后, 假如使用utf8编码格式, 每个ASCII码只占用一半的空间\n",
+    "\n",
+    "### 二. 什么是对象的size\n",
+    "\n",
+    "对象的size是一个很难清晰界定的概念, 但是为了能开展讨论, 我们需要持有以下几个观点:\n",
+    "* 一个对象的大小, 近似等于其所有非静态属性的大小之和(包括其父类中定义的属性)\n",
+    "* 类的方法不影响对象的大小\n",
+    "* 类的接口不影响对象的大小  \n",
+    "```\n",
+    "实现接口, 只不过是编译器在编译期间检查类是否复写了接口的全部方法; 运行期间jvm并不会做此项检查\n",
+    "```\n",
+    "* 对象的全部size, 是一个闭包的大小. 从starting object开始, 到完整的对象图  \n",
+    "\n",
+    "事实上, 基本数据类型占用的内存空间, 也不是像语言层面定义的那样永远不变, 严重依赖JVM对齐效果和优化手段. 具体可参考[do-you-know-your-data-size](https://www.javaworld.com/article/2077496/java-tip-130--do-you-know-your-data-size-.html). 一个检查数据类型所占用空间的工具如下:\n",
+    "```java\n",
+    "public class Sizeof {\n",
+    "    public static void main(String[] args) throws Exception {\n",
+    "        // Warm up all classes/methods we will use\n",
+    "        runGC();\n",
+    "        usedMemory();\n",
+    "        // Array to keep strong references to allocated objects\n",
+    "        final int count = 100000;\n",
+    "        Object[] objects = new Object[count];\n",
+    "\n",
+    "        long heap1 = 0;\n",
+    "        // Allocate count+1 objects, discard the first one\n",
+    "        for (int i = -1; i < count; ++i) {\n",
+    "            Object object = null;\n",
+    "\n",
+    "            // Instantiate your data here and assign it to object\n",
+    "//            object = new Object();\n",
+    "//            object = new Integer (i);\n",
+    "//            object = new Long (i);\n",
+    "            object = new String ();\n",
+    "            //object = new byte [128][1]\n",
+    "\n",
+    "            if (i >= 0)\n",
+    "                objects[i] = object;\n",
+    "            else {\n",
+    "                object = null; // Discard the warm up object\n",
+    "                runGC();\n",
+    "                heap1 = usedMemory(); // Take a before heap snapshot\n",
+    "            }\n",
+    "        }\n",
+    "        runGC();\n",
+    "        long heap2 = usedMemory(); // Take an after heap snapshot:\n",
+    "\n",
+    "        final int size = Math.round(((float) (heap2 - heap1)) / count);\n",
+    "        System.out.println(\"'before' heap: \" + heap1 +\n",
+    "                \", 'after' heap: \" + heap2);\n",
+    "        System.out.println(\"heap delta: \" + (heap2 - heap1) +\n",
+    "                \", {\" + objects[0].getClass() + \"} size = \" + size + \" bytes\");\n",
+    "        for (int i = 0; i < count; ++i) objects[i] = null;\n",
+    "        objects = null;\n",
+    "    }\n",
+    "\n",
+    "    private static void runGC() throws Exception {\n",
+    "        // It helps to call Runtime.gc()\n",
+    "        // using several method calls:\n",
+    "        for (int r = 0; r < 4; ++r) _runGC();\n",
+    "    }\n",
+    "\n",
+    "    private static void _runGC() throws Exception {\n",
+    "        long usedMem1 = usedMemory(), usedMem2 = Long.MAX_VALUE;\n",
+    "        for (int i = 0; (usedMem1 < usedMem2) && (i < 500); ++i) {\n",
+    "            s_runtime.runFinalization();\n",
+    "            s_runtime.gc();\n",
+    "            Thread.currentThread().yield();\n",
+    "\n",
+    "            usedMem2 = usedMem1;\n",
+    "            usedMem1 = usedMemory();\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    private static long usedMemory() {\n",
+    "        return s_runtime.totalMemory() - s_runtime.freeMemory();\n",
+    "    }\n",
+    "\n",
+    "    private static final Runtime s_runtime = Runtime.getRuntime();\n",
+    "} // End of class\n",
+    "```\n",
+    "以上程序, 在64bit虚拟机下得到:\n",
+    "```\n",
+    "'before' heap: 1029688, 'after' heap: 2631040\n",
+    "heap delta: 1601352, {class java.lang.Integer} size = 16 bytes\n",
+    "\n",
+    "'before' heap: 1029856, 'after' heap: 3431368\n",
+    "heap delta: 2401512, {class java.lang.Long} size = 24 bytes\n",
+    "```\n",
+    "\n",
+    "\n",
+    "### 三. 正确实现java的sizeof()\n",
+    "[https://www.javaworld.com/article/2077408/sizeof-for-java.html?page=2](https://www.javaworld.com/article/2077408/sizeof-for-java.html?page=2)  \n",
+    "[Download the source code that accompanies this article](http://images.techhive.com/downloads/idge/imported/article/jvw/2003/12/02-qa-1226-sizeof.zip)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
