--- a/GC/深入理解Java虚拟机/3-GC收集器与内存分配策略.ipynb
+++ b/GC/深入理解Java虚拟机/3-GC收集器与内存分配策略.ipynb
@@ -4,17 +4,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "GCRoots\n",
+    "### 一. 可达性分析与引用\n",
+    "#### 1. 可达性分析\n",
+    "`可达性分析`是一种判定对象是否存活的方法.算法的基本思想是: 通过一些列成为`GC Roots`的对象作为起点, 从这些节点开始向下搜索, 搜索走过的路径称为`引用链`. 如果一个对象不能通过GC Root节点的引用链达到, 则证明此对象不可用.可作为`GC Roots`的对象有以下几种: \n",
+    "* 虚拟机栈中引用的对象(Java方法内的局部变量)\n",
+    "* 方法区(永久代)中静态属性引用的对象(类的静态变量)\n",
+    "* 方法区中常量引用的对象\n",
+    "* 本地方法栈中JNI引用的对象\n",
     "\n",
-    "一句话, 只要对象被`方法的局部变量`，`类的静态变量`引用，就不会回收他们\n",
-    "\n",
+    "#### 2, 引用\n",
     "* 强引用\n",
-    "* 软引用\n",
-    "   \n",
+    "* 软引用  \n",
+    "  软引用关联的对象, 将在系统发生OOM之前进行回收\n",
     "* 弱引用\n",
-    "\n",
+    "  弱引用比软引用更弱一点. 被弱引用关联的对象, 只要系统发生GC就会被回收\n",
     "* 虚引用\n",
-    "\n",
+    "  最弱的一种引用, 它完全不会对对象的生存周期构成影响, 也无法通过引用获得对象实例. 其唯一目的就是在被引用的对象被GC时收到一个系统通知  \n",
+    "  \n",
     "常用的是强引用和软引用"
    ]
   },
@@ -22,7 +28,48 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### G1收集器\n",
+    "### 二. 垃圾回收器\n",
+    "#### 1. CMS回收器\n",
+    "1. CMS回收器的设计目标是什么   \n",
+    "CMS(`Concurrent Mark Sweep`)收集器是以最短回收停顿时间为目标的收集器. 适用于作为服务端程序的回收器选择, 因为服务端程序尤其重视响应速度, 希望系统停顿时间最短, 从而给用户带来良好体验\n",
+    "\n",
+    "2. CMS回收器的回收步骤  \n",
+    "从名字上就可以看出, CMS回收器基于\"先标记, 后清除\"的算法实现, 整个过程可分为4个步骤: \n",
+    "    * 初始标记(`Stop The World`)  \n",
+    "      仅仅是标记一下GC Root能直接关联到的对象, 速度很快\n",
+    "    * 并发标记  \n",
+    "      对初始标记到的对象, 进行GC Root Tracing. \n",
+    "    * 重新标记(`Stop The World`)  \n",
+    "      修正并发标记期间因用户程序继续执行导致标记产生变动的那部分对象的标记记录  \n",
+    "      该阶段的停顿时间一般比初始标记阶段稍长一些, 但远比并发标记的tracing时间短\n",
+    "    * 并发清除\n",
+    "    \n",
+    " 整个过程中, 最耗时的`并发标记`和`并发删除`过程, GC收集线程和用户线程一起工作, 因此达到了短停顿时间的效果\n",
+    "    \n",
+    "3. CMS远达不到完美的程度, 有3个明显缺点\n",
+    "    * 1. **CMS收集器对CPU资源非常敏感**:   \n",
+    "        * 并发的两个各阶段下, 虽然CMS收集器可以和用户线程并行, 因为会占用一部分线程资源获得时间片, 导致引用程序变慢, 总吞吐量降低\n",
+    "        * CMS默认启动的线程数是`(CPU_num+3)/4`. 因此:\n",
+    "            * 当CPU个数在4个以上时, CMS并发回收时GC线程个数不少于CUP个数的25%(至少抢占了1/4的CPU资源). 随着PU数量的增加这个比例会降低\n",
+    "            * 当CPU个数不足4个时, CMS对程序的影响就会很大. 比如CPU只有2个, CMS回收线程就会1个, 占用了50%的CPU资源. 这可能会导致并发阶段, 用户程序的执行速度突然降低50%\n",
+    "    \n",
+    "    * 2. **CMS无法处理浮动垃圾**  \n",
+    "       浮动垃圾是指: 在并发清除阶段, 因为用户线程也在并发执行而产生的新垃圾, 这些新垃圾由于没有经过3个标记阶段(初始标记, 并发标记, 重新标记), 因此CMS回收器无法再本次回收它们. 由于浮动垃圾的影响, CMS回收器不能像其他收集器一样, 等老年代被填满后再触发垃圾回收, 需要预留一部分空间给浮动垃圾. jdk1.5中, 默认老年代使用68%后就触发GC; jdk1.6以后该值变为92%. 这个比例可以使用`-XX:CMSInitiatingOccupancyFraction`设置. 如果CMS在运行期间的预留内存无法满足程序需求, 就会出现一次`Concurrent Mode Failure`失败, 此后CMS会退化成`Serial Old`收集器进行收集, 这样停顿时间就很长了\n",
+    "       ```\n",
+    "       `-XX:CMSInitiatingOccupancyFraction`设置的太高很容易导致大量\"Concurrent Mode Failure\"失败, 性能反而会降低\n",
+    "       ```\n",
+    "\n",
+    "    * 3. **CMS会产生大量内存碎片**\n",
+    "       因为CMS属于`标记清除`算法实现的, 所以在收集结束以后会产生很多的内存碎片. 碎片过多会给大对象分配带来麻烦, 往往出现老年代还有很大空间剩余但就是无法找到足够大的连续空间分配给对象. 为了解决这个问题, CMS提供了2个参数开启compact:\n",
+    "        * 1. `-XX:+UseCMSCompactAtFullCollection(默认开启)`: 当CMS顶不住要进行FullGC时先开启内存碎片整理\n",
+    "        * 2. `-XX:CMSFullGCsBeforeCompaction(默认为0)`: 用于设置执行多少次不压缩的Full GC后跟着来一次带压缩的. 默认为0表示每次进入full gc都要开启碎片整理"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2. G1收集器\n",
     "1. G1的特点\n",
     "    1. 划分Region :   \n",
     "       G1收集器不再对堆内存分代, 而是划分为多个大小相同的region. 划分方式有有2种 : \n",
@@ -35,9 +82,9 @@
     "        \n",
     "\n",
     "2. G1的收集模式\n",
-    "    1. YoungGC  \n",
+    "    1. **YoungGC**  \n",
     "       正在分配非巨型对象(在eden去分配的对象)时,  如果发现Eden区满了则会触发YoungGC. 每次YoungGC都会回收Eden region和Survivor region, 然后一部分对象将进入old region. YoungGC过程如下  \n",
-    "    2. MixedGC\n",
+    "    2. **MixedGC**    \n",
     "       当老年代(old region)消耗殆尽时, 会触发混合gc(MixedGC), 会回收整个young region和一部分的old region.而选择哪部分old region收集是通过用户指定的参数`-XX:MaxGCPauseMillis`推导而来. 改参数时用户设置的gc停顿时间, 选择那些预估gc时间和用户设置时间相近的old region进行gc\n",
     "\n",
     "\n",
@@ -52,7 +99,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 二. GC日志\n",
+    "### 三. GC日志\n",
     "1. `-XX:+PrintGCDetails`  \n",
     "   该参数告诉虚拟机在进行gc时打印内存回收日志, 并在进程退出时打印各个区的分配情况. 配合该参数的2个额外功能 : \n",
     "    1. `-XX:+PrintGCDateStamps` : 打印GC日志时带上时间\n",
@@ -87,7 +134,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 三. 对象的内存分配策略\n",
+    "### 四. 对象的内存分配策略\n",
     "Java自动内存管理分为2部分: 自动回收内存(gc)和自动分配内存(对象内存分配); 前面介绍了自动回收内存, 下面介绍自动发分配内存的几点\n",
     "#### 1. 优先在Eden区分配, minor gc时Servivor存不下的对象直接进入老年代\n",
     "\n",
@@ -131,7 +178,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
