--- a/Spark/spark面试题.ipynb
+++ b/Spark/spark面试题.ipynb
@@ -97,9 +97,9 @@
     "    ```\n",
     "    * 或者可以自定义Partitioner\n",
     "    \n",
-    "    \n",
-    "    spark\n",
-    "   比hive快的原因主要有2, 一个是shuffle后的结果可以存储在磁盘中, 另一个是DAG执行计划里, 多个job串联时结果不必回写到HDFS中\n",
+    " spark比hive快的原因主要有2, 一个是shuffle后的结果可以存储在磁盘中, 另一个是DAG执行计划里, 多个job串联时结果不必回写到HDFS中\n",
+    " \n",
+    " \n",
     "* **如果是join产生的数据倾斜, 且发现其中有一个表很小**\n",
     "    * 可以将小表通过broadcast广播出去  \n",
     "      这样完全避免了shuffle, 让join完全变成maper端的join\n",
