--- a/GC/线上问题debug的一般步骤.ipynb
+++ b/GC/线上问题debug的一般步骤.ipynb
@@ -97,6 +97,96 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 一. 某个服务响应缓慢的排查步骤(full gc频繁, cpu占用很高, cpu和内存均占用不高时)\n",
+    "1. top oder by with P：1040    # 首先按进程负载排序找到  axLoad(pid)\n",
+    "    * -P : 按照cpu使用排序\n",
+    "    * -M : 按照内存使用排序\n",
+    "\n",
+    "2. top -Hp 进程PID：1073       # 找到相关负载 线程PID\n",
+    "3. printf “0x%x\\n”线程PID： 0x431   # 将线程PID转换为 16进制，为后面查找 jstack 日志做准备\n",
+    "    ```bash\n",
+    "    ➜ d printf \"0x%x\\n\" 728             \n",
+    "    0x2d8\n",
+    "    ```\n",
+    "4. jstack  进程PID | vim +/十六进制线程PID -         \n",
+    "   例如：`jstack 1040|vim +/0x431 -`  ; 定位到代码行   \n",
+    "    jstack的日志往往如下: \n",
+    "    ```bash\n",
+    "    \"main\" #1 prio=5 os_prio=0 tid=0x00007f8718009800 nid=0xb runnable [0x00007f871fe41000] \n",
+    "       java.lang.Thread.State: RUNNABLE \n",
+    "        at com.aibaobei.chapter2.eg2.UserDemo.main(UserDemo.java:9) \n",
+    "\n",
+    "    \"VM Thread\" os_prio=0 tid=0x00007f871806e000 nid=0xa runnable \n",
+    "    ```\n",
+    "    * 如果定位到的线程是`VM Thread`: 表示是**gc线程导致的cpu负载过高**\n",
+    "        1. 首先通过`jatst -gcutil -t -h5`确定系统运行到现在执行过多少次gc  \n",
+    "            * -t : 打印系统自运行以来度过了多少秒  \n",
+    "            * -h5 : 每打印5行, 再打印一次header  \n",
+    "            * 一般使用gcutil和gccause查看gc状况, gccause输出和gcutil一样, 只多出了2列, 上次gc原因和本次gc原因\n",
+    "            <img src=\"img/jstat.png\">\n",
+    "        2. 然后使用`jmap dump:format=b,file=`导出系统当前内存中的对象, 找到堆内存中哪个类的对象占比最大, 进而处理相关代码  \n",
+    "           若发现内存中占用最多的对象比例也不是很高, 就要看看gc日志, 是不是调用了`System.gc()`导致的频繁full gc  \n",
+    "           ```bash\n",
+    "           [Full GC (System.gc()) [Tenured: 262546K->262546K(349568K), 0.0014879 secs] 262546K->262546K(506816K), [Metaspace: 3109K->3109K(1056768K)], 0.0015151 secs] [Times: user=0.00 sys=0.00, real=0.01 secs]  \n",
+    "           [GC (Allocation Failure) [DefNew: 2795K->0K(157248K), 0.0001504 secs][Tenured: 262546K->402K(349568K), 0.0012949 secs] 265342K->402K(506816K), [Metaspace: 3109K->3109K(1056768K)], 0.0014699 secs] [Times: user=0.00\n",
+    "           ```\n",
+    "     *  如果定位到是正常的**用户线程导致cpu负载过高**, 可以通过jstack中的日志查看是哪行代码导致的CPU负载过高\n",
+    "     * 上面2种情况是top发现cpu占用很高或内存占用很大时,通过查找线程的方法定位. 如果top之后发现**cpu和内存都不是很高, 但是系统运行就是很缓慢**怎们办?  \n",
+    "      这种情况可能是3种原因导致的\n",
+    "        1. 接口调用比较耗时, 且不定时出现:    \n",
+    "           可以通过压测加大阻塞点的出现频率, 从而在出现阻塞时, 从而通过jstack查看堆栈信息找到阻塞点\n",
+    "        2. 如果是某个功能突然出现停滞, 且无法复线, 一般是因为锁竞争(大量线程处于waiting状态)    \n",
+    "           此时, 如果只打印堆栈一次, 可能发现很多线程都是WAITING或TIMED_WAITING 状态的; 因此可以每隔10秒导出一次jstack日志, 导出3,4次后, 找到这4,5个日志中都处于停滞(WAITING)的线程(一般一个线程不会停滞二三十秒), 看这些线程是阻塞在哪行代码\n",
+    "        3. 出现死锁  \n",
+    "           如果出现死锁, jstack会在底部提示出现死锁, 且告知是在哪行代码等待的锁\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "### 二. 关于top命令\n",
+    "* 关于load average: 一定程度上表示cpu负载, top分别输出1分钟,5分钟, 15分钟的平均坤负载情况  \n",
+    "   但是linux下负载不仅记录了running状态的进程, 还记录了sleep状态的进程; 前者占用cpu, 后者往往是因为io阻塞. 所以该数值在linux下不能100%表示cpu的负载  \n",
+    "* -P : 按照cpu使用排序\n",
+    "* -M : 按照内存使用排序\n",
+    "\n",
+    "#### 1. CPU消耗分析\n",
+    "1. cpu主要用于中断, 内核进程, 用户进程的任务处理\n",
+    "2. cpu利用率\n",
+    "    * cpu利用率是cpu在用户进程, 内核进程, 中断处理, IO等待,空闲状态着5个人部分的使用百分比\n",
+    "    * linux建议用户进程的cpu消耗和内核进程的cpu消耗比率在(65%~70%)和(30%~35%)左右\n",
+    "    * `top`和`pidstat`用来查看cpu的消耗状况\n",
+    "        1. `top`  \n",
+    "            top命令的第三行表示CPU消耗\n",
+    "              * us : 用户进程所占百分比; **us过高, 表示应用程序消耗了大部分CPU. 对Java应用而言, 要找到最消耗cpu的线程所执行的代码**  \n",
+    "              * sy : 内核进程所占百分比; **sy过高, 表示ava进程开启有大量线程, 且线程在阻塞(等待锁,等待IO)和运行状态不断切换, 产生大量上下文切换** ; 此时查看jstack会发现有好多线程都处于TIMED_WAITING状态(调用了obj.wait(time))\n",
+    "              * ni : 使用nice命令改变优先级的任务所占百分比\n",
+    "              * id : cpu空闲时间所占百分比\n",
+    "              * wa : 等待IO所占百分比\n",
+    "              * hi : 硬件中断所占百分比\n",
+    "              * si : 软件中断所占百分比\n",
+    "          <img src=\"img/top1.png\">\n",
+    "        2. `pidstat`\n",
+    "           * 用法 : `pidstat [ 选项 ] [ <时间间隔> ] [ <次数> ]`\n",
+    "           * 查看指定: 进程pidstat -p 进程号(ALL=全部显示) 5 2 <img src=\"img/pidstat1.png\" width=\"80%\">\n",
+    "           \n",
+    "\n",
+    "#### 2. 磁盘IO消耗分析  \n",
+    "1. Linux中, 跟踪线程的文件IO消耗, 主要是通过pidstat查看  \n",
+    "2. 格式:  \n",
+    "   `pidstat -d -t -p [进程id] interval during`  \n",
+    "    * -d: 表示disk\n",
+    "    * -t: 表示粒度到线程级查看   \n",
+    "    * 输出:  \n",
+    "        * kb_rd/s : 每秒读取的多少kb\n",
+    "        * kb_wr/s : 每秒写入多少kb\n",
+    "    <img src=\"img/io.png\" width=\"80%\">"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -120,7 +210,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
