--- a/Hbase/1-Hbase基本概念.ipynb
+++ b/Hbase/1-Hbase基本概念.ipynb
@@ -65,7 +65,7 @@
     "    * 每一列可由一个thread单独处理-查询的并发  \n",
     "    * 因为相同列的数据在一起存储, 数据类型一致, 特征相似, 方便高效压缩存储  \n",
     "2. Hbase的列簇式存储  \n",
-    "    * Hbase没有选择纯粹的列式存储, 因为Hbase支持上百万个列, 没格列单独形成文件的话会造成每个标的metadata信息多大, 而且会导致产生数百万个小文件, 降低查询效率\n",
+    "    * Hbase没有选择纯粹的列式存储, 因为Hbase支持上百万个列, 每个列单独形成文件的话会造成每个表的metadata信息多大, 而且会导致产生数百万个小文件, 降低查询效率\n",
     "    * 采用列簇式存储: 同一个列簇的所有列的数据存放在一起; 不同列簇的数据在物理上分开  \n",
     "3. 列簇是排好序的Cell构成的  \n",
     "  1. Cell的构成  \n",
@@ -79,7 +79,7 @@
     "    * row key: 升序  \n",
     "    * column family: 升序  \n",
     "    * qualifier: 升序  \n",
-    "    * timestamp: 姜旭  \n",
+    "    * timestamp: 降序  \n",
     "  3. Cell支持二分查找\n"
    ]
   },
