--- a/Hbase/2-Hbase系统架构.ipynb
+++ b/Hbase/2-Hbase系统架构.ipynb
@@ -30,7 +30,7 @@
     "   $B^+$树是多路查找树, 所以要随机查找一个数值, 将节点调入内存的次数只和树的高度有关. 又因为$B^+$树的每个节点包含很多值, 所以节点调入内存时产生的磁盘IO是顺序IO, 又加快了节点调入内存的速度\n",
     "3. LSM tree如何快速执行随机写?  \n",
     "   * LSM tree首先在内存中维护一个有序的树形结构,类似$B^+$树,称作MemStore. 随机写入的数据会在MemStore中调整树型后插入这个有序树中.  \n",
-    "   * 为了保证数据的可靠性, 在写入Memstore前会先WAL(Write-Ahead-Log)的方式备份写日志  \n",
+    "   * 为了保证数据的可靠性, 在写入Memstore前会先以WAL(Write-Ahead-Log)的方式备份写日志  \n",
     "   * 当MemStore的数据量到达一定条件后, 会被刷新到磁盘上形成一个新文件\"HFile\". 因为这种写磁盘是顺序写, 没有旧文件被读取修改, 因此执行很快  \n",
     "   * \"HFile\"在LSM tree架构里又称sstable, 意为相似的有序文件.当执行随机读取时, 首先在MemStore中查找是否存在这个key, 是的话直接返回, 不是的话查找每个HFile中的记录. 因为HFile中的记录和Memstore一样也是有序的树形结构, 所以查找一个HFile的时间复杂度 $O(logN)$ , 所有的HFile查找时间复杂度 $k*O(logN)$. 因此, 如果HFIle的数量很多, 会使得查找速度变慢, 需要Compact操作 \n",
     "   * LSM tree主要是对写优化  \n",
@@ -50,7 +50,7 @@
    "metadata": {},
    "source": [
     "#### 三. Bloom过滤器  \n",
-    "1. 上面的LST tree架构中提到, 随机读时使用Bloom过滤器减少查找的HFile数量, 在Hbase就是使用Bloom过滤器判断该rowkey是否可能在该HFile中    \n",
+    "1. 上面的LSM tree架构中提到, 随机读时使用Bloom过滤器减少查找的HFile数量, 在Hbase就是使用Bloom过滤器判断该rowkey是否可能在该HFile中    \n",
     "2. 算法描述  \n",
     "    * Bloom过滤器用于判断一个元素是否在一个集合内,是一种概率数据结构  \n",
     "    它返回\"可能在集合内\"和\"绝不可能在集合内\"2个结果. 集合中的元素越多, Bloom误判成可能在集合中的概率就越大\n",
@@ -86,7 +86,13 @@
     "4. meta表的列族和列\n",
     "    * 最主要的Family：info\n",
     "    * info里面包含三个列：regioninfo, server, serverstartcode。\n",
-    "    其中regioninfo就是Region的详细信息，包括StartKey, EndKey 以及每个Family的信息等。server存储的就是管理这个Region的RegionServer的地址。所以当Region被拆分、合并或者重新分配的时候，都需要来修改这张表的内容。"
+    "    其中regioninfo就是Region的详细信息，包括StartKey, EndKey 以及每个Family的信息等。server存储的就是管理这个Region的RegionServer的地址。所以当Region被拆分、合并或者重新分配的时候，都需要来修改这张表的内容。\n",
+    "    \n",
+    "5. Hbase数据查询过程: \n",
+    "    1. 客户端连接zookeeper, 查找meta表在哪个机器上\n",
+    "    2. 查询meta表, 根据每个region的`startKey`和`endKey`找到region所在的server\n",
+    "    3. 到指定Server上查找该region\n",
+    "    4. meta标的信息会被缓存起来, 便于下次查找"
    ]
   },
   {
