--- a/Hbase/4-Region Splitting and Merging.ipynb
+++ b/Hbase/4-Region Splitting and Merging.ipynb
@@ -4,13 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 一. 前期概念\n",
+    "#### 一. 前言\n",
     "1. Region是一个连续范围内的rowkey空间, 连续指Region中的rowkey在start key到end key范围内排序  \n",
     "2. Region之间不会产生交叉, 一个rowkey只能属于一个Region, 被一个RegionServer管理\n",
     "3. meta表中, 使用3层B树找到某个表的某个rowkey所在的Region   \n",
     "4. 当初次创建一张表时, Hbase只会分配一个Region给这张表. 这意味着初始时, 所有的request都会通往一个RegionServer上\n",
     "\n",
-    "### 二. PRE-SPLITTING\n",
+    "#### 二. PRE-SPLITTING\n",
     "1. 为什么使用预先划分?  \n",
     " 上面讲到, 一张表初始创建时, 因为只有一个Region, 所以所有的请求都会发往一个RegionServer, 造成压力巨大. 如果创建表时就制定Region的数量, 并按照一定的规则将rowkey发往不同的Region, 就会在初始就使用集群的分布式功能\n",
     " \n",
@@ -26,18 +26,16 @@
     "    \n",
     "3. 通常使用预划分建表指定region数量以及region划分算法, 后面使用Region自动划分\n",
     "\n",
-    "### 三. AUTO SPLITTING\n",
+    "#### 三. AUTO SPLITTING\n",
     "1. 什么时候执行自动划分   \n",
     "   无论是否开启了pre-spliting, 一旦Region到一定限制, 就会自动化分为2个Region. 有3种预定义的自动划分策略\n",
     "    * ConstantSizeRegionSplitPolicy\n",
     "    * IncreasingToUpperBoundRegionSplitPolicy\n",
-    "    * KeyPrefixRegionSplitPolicy."
+    "    * KeyPrefixRegionSplitPolicy.\n",
+    "    \n",
+    "    \n",
+    "#### 四. Force-split（手工切分）"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
