--- a/Spark/spark组件/5-graphx.ipynb
+++ b/Spark/spark组件/5-graphx.ipynb
@@ -21,14 +21,14 @@
     "#### 1. 图的表示\n",
     "(1) 每个Vertex都是一个kv对, 以64-bit长度的long型值作为key(称作vertexId); 顶点的自定义属性值为value  \n",
     "(2) 每个Edge都有srcVertextId和destVertexId; 还有边上的属性值  \n",
-    "(3) **Graph[VD,ED]**是图对象的泛型, VD是定点的属性类型; ED是边的属性类型  \n",
+    "(3) **Graph[VD,ED]** 是图对象的泛型, VD是定点的属性类型; ED是边的属性类型  \n",
     "(4) 有些case中, vertex的属性可能有多个类型, 此时只能通过继承同一个接口实现 :   \n",
-    "    ```scala\n",
-    "    class VertexProperty()\n",
-    "    case class UserProperty(val name:String) extends VertexProperty\n",
-    "    case class ProductProperty(val name:String,val price:Double) extends VertexProperty\n",
-    "    var g:Graph[VertexProperty,String] = null\n",
-    "    ```\n",
+    "```scala\n",
+    "class VertexProperty()\n",
+    "case class UserProperty(val name:String) extends VertexProperty\n",
+    "case class ProductProperty(val name:String,val price:Double) extends VertexProperty\n",
+    "var g:Graph[VertexProperty,String] = null\n",
+    "```\n",
     "#### 2. Graph是静态的\n",
     "(1) 和RDD一样, Graph也是静态的, 任何修改Graph的值或结构的操作, 都会产生一个全新的Graph;   \n",
     "(2) 不过, 源Graph中未产生修改的部分数据可以在新产生的Graph上重用\n",
@@ -822,7 +822,7 @@
     "      println(g.vertices.count)\n",
     "    }\n",
     "\n",
-    "    g.triplets.collect.foreach(println)\n",
+    "    g.triplets.collect.foreach(println)  // 必须使用foreach才能激活cache和persist动作\n",
     "}\n",
     "fun()"
    ]
@@ -830,17 +830,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Apache Toree - Scala",
-   "language": "scala",
-   "name": "apache_toree_scala"
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
-   "codemirror_mode": "text/x-scala",
-   "file_extension": ".scala",
-   "mimetype": "text/x-scala",
-   "name": "scala",
-   "pygments_lexer": "scala",
-   "version": "2.11.12"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
