--- a/Shell脚本/1-awk教程.ipynb
+++ b/Shell脚本/1-awk教程.ipynb
@@ -176,6 +176,22 @@
     "kitty   90   95   87  272\n",
     " jack   72   84   99  255\n",
     "总成绩  222  239  246  707\n",
+    "```\n",
+    "\n",
+    "4. awk进行分组聚合\n",
+    "```bash\n",
+    "awk -F\"\\t\" '\n",
+    "{\n",
+    "    key = $1;\n",
+    "    bill_click[key] += $2;\n",
+    "    cd_click[key] += $3;\n",
+    "    cost[key] += $4;\n",
+    "} END {\n",
+    "    for (ele in bill_click) {\n",
+    "        printf(\"%s\\t%s\\t%s\\t%s\\n\", ele, bill_click[ele], cd_click[ele], cost[ele]);\n",
+    "    }\n",
+    "}\n",
+    "' ./tmp/storm_bill_cd > ./tmp/merged_bill_cd\n",
     "```"
    ]
   }
