--- a/Shell脚本/2-常用命令.ipynb
+++ b/Shell脚本/2-常用命令.ipynb
@@ -85,11 +85,47 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### rsync命令\n",
+    "1. 参数\n",
+    "    * `-v` :展示详细的同步信息\n",
+    "    * `-a` :归档模式，相当于 -rlptgoD\n",
+    "        * `-r` :递归目录\n",
+    "        * `-l` :同步软连接文件\n",
+    "        * `-p` :保留权限\n",
+    "        * `-t` :将源文件的\"modify time\"同步到目标机器\n",
+    "        * `-g` :保持文件属组\n",
+    "        * `-o` :保持文件属主\n",
+    "        * `-D` :和--devices --specials一样，保持设备文件和特殊文件\n",
+    "        \n",
+    "2. 测试远端是否存在该文件\n",
+    "```shell\n",
+    " rsync -L --timeout=10 ${rsync_file}\n",
+    "```\n",
+    "\n",
+    "3. 同步一个远端daemon方式启动的rsync server下的文件夹   \n",
+    "   使用对方的`ip::模块名/相对路径`来拷贝文件; 前提是要求远端server的`/etc/rsyncd.conf`配置文件中的`hosts allow`项, 存在该机器IP\n",
+    "```bash\n",
+    "rsync -r -v root@10.134.33.80::root/search/ted/docker/hadoop .\n",
+    "# root@ : 远端用户名(可省略)\n",
+    "# 10.134.33.80 : 远端IP\n",
+    "# ::root : 远端rsync server的/etc/rsyncd.conf文件中配置的模块名\n",
+    "# search/ted/docker/hadoop : 远端root模块下path属性的相对文件路径\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### sshpass命令\n",
+    "ssh自动登录\n",
+    "```bash\n",
+    "sshpass -p noSafeNoWork@2016 ssh -o StrictHostKeyChecking=no root@10.140.85.161\n",
+    "```"
+   ]
   }
  ],
  "metadata": {
