--- a/Shell脚本/3-常用符号.ipynb
+++ b/Shell脚本/3-常用符号.ipynb
@@ -4,62 +4,92 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###  \\\\$@ 与 \\\\$* \n",
+    "### I.  \\$@ 与 \\$* \n",
     "\n",
-    "1. `$@`与`$*`均表示脚本的输入参数列表, 在不使用`\"\"`的请款下二者完全相同\n",
+    "1. `$@`与`$*`均表示脚本的输入参数列表, 在不使用`\"\"`的情况下二者完全相同  \n",
+    "    输入参数的字符串将以IFS分割成单个输入参数\n",
+    "```bash\n",
+    "for i in $@:\n",
+    "do\n",
+    "echo '$@: '$i\n",
+    "done\n",
+    "##########################\n",
+    "for i in $*:\n",
+    "do\n",
+    "echo '$*: '$i\n",
+    "done\n",
+    "# |- bash 111.sh aa bb cc\n",
+    "#     $@: aa\n",
+    "#     $@: bb\n",
+    "#     $@: cc\n",
+    "#     $*: aa\n",
+    "#     $*: bb\n",
+    "#     $*: cc:\n",
+    "# |- bash 111.sh aa \"bb  cc\"\n",
+    "#     $@: aa\n",
+    "#     $@: bb\n",
+    "#     $@: cc\n",
+    "#     $*: aa\n",
+    "#     $*: bb\n",
+    "#     $*: cc:\n",
+    "```\n",
     "\n",
     "2. 使用`\"\"`包住时, 有以下几个区别\n",
-    "    * `\"$*\"`: 强调整体\n",
-    "    * `\"$*\"` : 强调个体\n",
-    "    \n",
-    "3. 示例\n",
-    "    * 脚本\n",
-    "    ```shell\n",
-    "    for i in \"$*\":\n",
-    "    do\n",
-    "      echo '\"$*\":'$i\n",
-    "    done\n",
+    "   如下示例, 分别以`bash 脚本名 aa bb cc`和`bash 脚本名 aa \"bb cc\"`作为启动命令, 查看不同输出  \n",
+    "    * `\"$*\" `:  强调整体  \n",
+    "```bash\n",
+    "for i in \"$*\":\n",
+    "do\n",
+    "echo '\"$*\":'$i\n",
+    "done\n",
+    "# |- bash 111.sh aa bb cc\n",
+    "#    \"$*\":aa bb cc\n",
+    "# |- bash 111.sh aa \"bb cc\"\n",
+    "#    \"$*\":aa bb cc\n",
+    "```\n",
     "\n",
-    "    echo \"=================\"\n",
+    "    * `\"$@\" ` : 强调个体\n",
+    "```bash\n",
+    "for i in \"$@\":\n",
+    "do\n",
+    "echo '\"$@\":'$i\n",
+    "done\n",
+    "# |- bash 111.sh aa bb cc\n",
+    "#    \"$@\":aa\n",
+    "#    \"$@\":bb\n",
+    "#    \"$@\":cc\n",
+    "# |- bash 111.sh aa \"bb cc\"\n",
+    "#    \"$@\":aa\n",
+    "#    \"$@\":bb cc\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### II. 字符串的默认值\n",
+    "1. 用默认值初始化  \n",
+    "    * 使用`${val1-$val2}`的意思是: 如果val1为null, 则取val2的值  \n",
+    "    * 使用`${val1:-$val2}`的意思是: 如果val1为null或空字符串时, 取val2的值\n",
+    "```bash\n",
+    "default=\"hello world\"\n",
+    "val1=${1:-$default}\n",
+    "echo $val1\n",
+    "# bash 111.sh\n",
+    "# hello world\n",
+    "# bash 111.sh haha\n",
+    "# haha\n",
+    "```\n",
     "\n",
-    "    for i in \"$@\":\n",
-    "    do\n",
-    "      echo '\"$@\":'$i\n",
-    "    done\n",
-    "\n",
-    "    echo \"=================\"\n",
-    "\n",
-    "    for i in $*:\n",
-    "    do\n",
-    "      echo '$*:'$i\n",
-    "    done\n",
-    "\n",
-    "    echo \"=================\"\n",
-    "\n",
-    "    for i in $@:\n",
-    "    do\n",
-    "      echo '$@:'$i\n",
-    "    done\n",
-    "    ```\n",
-    "    * 运行 : `bash test.sh 1 2 \"2 3\"`\n",
-    "    \n",
-    "    * 输出 : \n",
-    "```text\n",
-    "\"$*\":1 2 2 3:\n",
-    "=================\n",
-    "\"$@\":1\n",
-    "\"$@\":2\n",
-    "\"$@\":2 3:\n",
-    "=================\n",
-    "$*:1\n",
-    "$*:2\n",
-    "$*:2\n",
-    "$*:3:\n",
-    "=================\n",
-    "$@:1\n",
-    "$@:2\n",
-    "$@:2\n",
-    "$@:3:\n",
+    "2. 繁琐写法: 条件判断  \n",
+    "```bash\n",
+    "default=\"hello world\"\n",
+    "if [ $# -eq 1 ]\n",
+    "then\n",
+    "  default=$1\n",
+    "fi\n",
+    "echo $default\n",
     "```"
    ]
   },
