--- a/消息队列/rabbitmq/1-rabbitmq安装配置.ipynb
+++ b/消息队列/rabbitmq/1-rabbitmq安装配置.ipynb
@@ -30,7 +30,12 @@
     "     broker会默认创建一个`guest`用户, 密码也是`guest`\n",
     "2. 开启`rabbitmq-server`   \n",
     "   ```bash\n",
+    "   #service服务\n",
     "   service rabbitmq-server start\n",
+    "   #解压缩\n",
+    "   sbin/rabbitmq-server\n",
+    "   #停止服务\n",
+    "   sbin/rabbitmqctl shutdown\n",
     "   ```\n",
     "     \n",
     "#### 二. 修改最大文件打开个数   \n",
@@ -132,7 +137,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
