feat: jvm分代大小的影响

--- a/GC/线上问题debug的一般步骤.ipynb
+++ b/GC/线上问题debug的一般步骤.ipynb
@@ -90,6 +90,132 @@
     "        * kb_wr/s : 每秒写入多少kb\n",
     "    <img src=\"img/io.png\" width=\"80%\">"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. 线上故障主要会包括 cpu、磁盘、内存以及 网络 问题，而大多数故障可能会包含不止一个层面的问题，所以进行排查时候尽量四个方面依次排查一遍。\n",
+    "2. 基本上出问题就是 df、free、top 三连，然后依次 jstack、jmap 伺候，具体问题具体分析即可。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### CPU\n",
+    "  一般来讲我们首先会排查cpu方面的问题。cpu异常往往还是比较好定位的。原因包括业务逻辑问题(死循环)、频繁gc以及上下文切换过多。而最常见的往往是业务逻辑(或者框架逻辑)导致的，可以使用jstack来分析对应的堆栈情况。\n",
+    "  \n",
+    "1. 用top看一下哪个线程占用比较高\n",
+    "```shell\n",
+    "top -H -p pid\n",
+    "```\n",
+    "3. 将占用最高的 `线程id` 转换为16进制的 `nid`\n",
+    "```shell\n",
+    "printf '%x' threadId\n",
+    "```\n",
+    "1. 用 vim 打开 jstack 的输出, 可以再 vim 中查找刚刚的 `nid`   \n",
+    "```shell\n",
+    "jstack pid | vim -\n",
+    "```\n",
+    "[注] : 当然更常见的是我们对整个 jstack 文件进行分析，通常我们会比较关注 `WAITING` 和 `TIMED_WAITING` 的部分\n",
+    "    1. 只看线程名和线程状态  \n",
+    "    ```shell\n",
+    "    bash: cat jstack.log | grep \"java.lang.Thread.State\" -B1 \n",
+    "    \"IPC Parameter Sending Thread #29\" #17476 daemon prio=5 os_prio=0 tid=0x00007f8cd400f000 nid=0x5a6 waiting on condition [0x00007f8c787f3000]\n",
+    "   java.lang.Thread.State: TIMED_WAITING (parking)\n",
+    "--\n",
+    "\"Attach Listener\" #16886 daemon prio=9 os_prio=0 tid=0x00007f8ce0005800 nid=0x3266 waiting on condition [0x0000000000000000]\n",
+    "   java.lang.Thread.State: RUNNABLE\n",
+    "--\n",
+    "\"data_server-akka.actor.default-dispatcher-32\" #2542 prio=5 os_prio=0 tid=0x00007f8ccc23e000 nid=0x3412 waiting on condition [0x00007f8c78bf7000]\n",
+    "   java.lang.Thread.State: WAITING (parking)\n",
+    "    ```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
