--- a/代码设计与源码阅读/如何高效阅读开源项目源码/如何看源码.ipynb
+++ b/代码设计与源码阅读/如何高效阅读开源项目源码/如何看源码.ipynb
@@ -44,6 +44,14 @@
     "#### 2. 顺序图(序列图, 时序图)\n",
     "<img src=\"img/uml3.png\" width=\"80%\">"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### uml记号\n",
+    "<img src=\"img/umlcheatsheet.jpg\">"
+   ]
   }
  ],
  "metadata": {
