--- a/scala体系/Akka /2-actor的监控与生命周期.ipynb
+++ b/scala体系/Akka /2-actor的监控与生命周期.ipynb
@@ -68,7 +68,10 @@
     "   关闭一个父actor, 会递归的关闭其创建的所有子actor; 同样, 停止一个actorsystem, 也会停止下面的所有actor    \n",
     "2. 重启一个actor, 其关联的子actor也会重启   \n",
     "3. `actor`是被`path`和`一个uid`唯一标识的  \n",
-    "4. 对于Restart的监控做法, `preRestart`在老actor上调用, `postRestart`在新actor上调用"
+    "4. 对于Restart的监控做法, `preRestart`在老actor上调用, `postRestart`在新actor上调用\n",
+    "\n",
+    "\n",
+    "Demo: [https://github.com/lj72808up/Codes/blob/master/Actor_Demo/src/main/scala/com/test/TestSupervisor.scala](https://github.com/lj72808up/Codes/blob/master/Actor_Demo/src/main/scala/com/test/TestSupervisor.scala)"
    ]
   }
  ],
