--- a/数据库/mysql/3-mysql优化/3.2-select语句优化.ipynb
+++ b/数据库/mysql/3-mysql优化/3.2-select语句优化.ipynb
@@ -86,21 +86,46 @@
    "metadata": {},
    "source": [
     "#### 2.3 range 优化\n",
-    "range 访问用于, 当条件中的列使用操作符  `=`, `<>`, `>`, `>=`, `<`, `<=`, `IS NULL`, `<=>`, `BETWEEN`, `LIKE` 或 `IN()` 和常量值进行比较时. \n",
-    "```sql\n",
-    "SELECT * FROM tbl_name\n",
-    "  WHERE key_column = 10;\n",
+    "`range access` 方法是通过使用一个索引, 来遍历表的部分行的方法. 它会满足一个或多个索引间隔的条件. 以下章节, 描述优化器使用 range access 时要满足的条件的条件\n",
+    "\t\n",
+    "1. **单一列索引上的 Range Access**    \n",
+    "   在单一索引上, 定义 range 条件的方法: \n",
+    "    * BTREE 和 HASH 索引下, column 和常量使用操作符 `=`, `<=>`, `IN()`, `IS NULL`, 或 `IS NOT NULL` 进行比较\n",
+    "    * 此外, BTREE 索引使用如下操作符仍表示 range 条件\n",
+    "  \t  1. 操作符  `>`, `<`, `>=`, `<=`, `BETWEEN`, `!=`, or `<>`\n",
+    "  \t  2. LIKE 一个常量字符串 (不以通配符开头的字符串)\n",
+    "    * 无论索引是什么形式, 多个 range 条件使用 `OR` 或 `AND` 进行组合后, 形成的仍是 range 条件\n",
+    " \n",
+    "   上述提到的**常量**, 是指:\n",
+    "      1. 字符串构成的常量\n",
+    "      2. `const` 表或 `system` 表的某一列\n",
+    "         1. `system` 表: \n",
+    " \t\t只有一行的表 = system表, system 表是 const 表 join 的特殊情况\n",
+    "         2.  `const` 表:     \n",
+    "         最多只匹配一行的表. 因为只有一行, 这样的匹配结果也会被优化器当做一个常量来处理. 当使用 `PRIMARY KEY`(主键) 或 `UNIQUE index`(唯一键) 同常量值作比较时, 都会生成 const 表. 如下语句中 tbl_name 都是 const 表 \n",
+    "      ```sql    \n",
+    " \tSELECT * FROM tbl_name WHERE primary_key=1;   -- (主键)\n",
+    "\tSELECT * FROM tbl_name\n",
+    "\t     WHERE primary_key_part1=1 AND primary_key_part2=2;   -- (联合主键)\n",
+    "      ```\n",
+    "   \n",
+    "2. **组合索引上的 Range Access**    \n",
+    "组合索引上的 Range Access 是单一列索引上执行 Range Access 的扩展 , range 条件通过一个有序的 key 元祖形式限制组合索引列上的值\n",
+    "    * 对于Hash索引, range 条件只能是 `AND` 连接的且每个索引部分都只能进行等值判断的形式  \n",
+    "      其中, `const1, const2, …` 是常量, `cmp` 可以是 `=`, `<=> (相当于等于,只是比较的2个值中, 有一个为null返回0, 2个都为null返回1)`, `IS NULL`\n",
+    "    ```sql\n",
+    "        key_part1 cmp const1\n",
+    "    AND key_part2 cmp const2\n",
+    "    AND ...\n",
+    "    AND key_partN cmp constN;\n",
+    "    ```\n",
+    "    * 对于`Btree`索引, range 条件是 `AND` 连接不同索引部分, 且每个索引部分可以使用 `=, <=>, IS NULL, >, <, >=, <=, !=, <>, BETWEEN, or LIKE 'pattern'(pattern不能以通配符开头)` 同一个常量进行比较的形式\n",
     "\n",
-    "SELECT * FROM tbl_name\n",
-    "  WHERE key_column BETWEEN 10 and 20;\n",
+    "3. Equality Range Optimization of Many-Valued Comparisons\n",
+    "4. Skip Scan Range Access Method\n",
+    "5. Range Optimization of Row Constructor Expressions\n",
+    "6. Limiting Memory Use for Range Optimization\n",
     "\n",
-    "SELECT * FROM tbl_name\n",
-    "  WHERE key_column IN (10,20,30);\n",
-    "\n",
-    "SELECT * FROM tbl_name\n",
-    "  WHERE key_part1 = 10 AND key_part2 IN (10,20,30)\n",
-    "```\n",
-    "以下章节, 描述优化器使用 range 访问时的条件\n",
     "\t"
    ]
   },
