--- a/消息队列/rabbitmq/2-AMQP(0-9-1)模型解释.ipynb
+++ b/消息队列/rabbitmq/2-AMQP(0-9-1)模型解释.ipynb
@@ -177,7 +177,13 @@
     "### 十二. amqp 0-9-1 模型定义的方法。\n",
     "AMQP0-9-1 被构建为一系列的方法，这些方法类似于HTTP的方法。这些方法同时被分为不同种类( class )，种类的区分仅仅是逻辑上对 amqp 模型方法的分组\n",
     "#### 1. exchange 分类下的方法  \n",
-    "  exchange 分类下的方法, 用来操作 exchange，包括："
+    "  exchange 分类下的方法, 用来操作 exchange，包括：\n",
+    "* exchange.declare\n",
+    "* exchange.declare-ok\n",
+    "* exchange.delete\n",
+    "* exchange.delete-ok  \n",
+    "\n",
+    "以上4个方法分为2对儿, 一对是 `exchange.declare` 和 `exchange.declare-ok`, 另一对是 `exchange.delete`\n"
    ]
   },
   {
