--- a/scala体系/Akka /3-routing.ipynb
+++ b/scala体系/Akka /3-routing.ipynb
@@ -213,15 +213,10 @@
     "val resizer = DefaultResizer(lowerBound = 2, upperBound = 15)\n",
     "val router30: ActorRef =\n",
     "  context.actorOf(RoundRobinPool(5, Some(resizer)).props(Props[Worker]), \"router30\")\n",
-    "```"
+    "```\n",
+    "\n",
+    "reference: [https://github.com/lj72808up/Codes/blob/master/Actor_Demo/src/main/scala/com/test/TestRouter.scala](https://github.com/lj72808up/Codes/blob/master/Actor_Demo/src/main/scala/com/test/TestRouter.scala)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
